@@ -106,6 +106,7 @@ VOID PhAddSettings(
 
 EXT ULONG PhCsCollapseServicesOnStart;
 EXT ULONG PhCsHighlightingDuration;
+EXT ULONG PhCsPropagateCpuUsage;
 EXT ULONG PhCsUpdateInterval;
 
 EXT ULONG PhCsColorNew;
